fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ section {
     transform: translate(-50%);
     position: relative;
     width: 10rem;
-    margin-bottom: 25px;
+    margin-bottom: 50px;
 }
 
 /* ---- page content ---- */
